force-app/main/default/objects/ActionPlanTemplateTask__c/ActionPlanTemplateTask__c.object-meta.xml
<CustomObject>
    <description>Action Plan Template Task detail</description>
    <label>Action Plan Template Task</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action Plan Template Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>