force-app/main/default/objects/ActionPlanTemplateTask__c/fields/Action_Plan_Template__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Template__c</fullName>
    <label>Action Plan Template</label>
    <referenceTo>ActionPlanTemplate__c</referenceTo>
    <relationshipName>ActionPlanTemplateTasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>