force-app/main/default/objects/ActionPlanTemplateTask__c/fields/ActionPlanTemplateTask__c.field-meta.xml
<CustomField>
    <fullName>ActionPlanTemplateTaskx__c</fullName>
    <label>Task Dependency</label>
    <referenceTo>ActionPlanTemplateTask__c</referenceTo>
    <relationshipLabel>APT Task Templates</relationshipLabel>
    <relationshipName>ActionPlanTemplateTasks</relationshipName>
    <type>Lookup</type>
</CustomField>