force-app/main/default/objects/ActionPlanTemplateTask__c/fields/APTTaskTemplate__c.field-meta.xml
<CustomField>
    <fullName>ActionPlanTemplateTask__c</fullName>
    <label>Task Dependency</label>
    <referenceTo>ActionPlanTemplateTask__c</referenceTo>
    <relationshipLabel>APT Task Templates</relationshipLabel>
    <relationshipName>R00NR0000000VaVDMA0</relationshipName>
    <type>Lookup</type>
</CustomField>