force-app/main/default/objects/ActionPlanTemplateTask__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <picklist>
        <picklistValues>
            <fullName>High</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Medium</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Low</fullName>
        </picklistValues>
    </picklist>
    <type>Picklist</type>
</CustomField>