force-app/main/default/objects/ActionPlanTemplateTask__c/fields/TemplateTaskDependency__c.field-meta.xml
<CustomField>
    <fullName>TemplateTaskDependency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task Dependency</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Dependent Task required to be from same Action Plan Template</errorMessage>
        <filterItems>
            <field>$Source.Action_Plan_Template__c</field>
            <operation>equals</operation>
            <valueField>$Source.Action_Plan_Template__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ActionPlanTemplateTask__c</referenceTo>
    <relationshipLabel>Action Plan Template Tasks</relationshipLabel>
    <relationshipName>ActionPlanTemplateTasks</relationshipName>
    <type>Lookup</type>
</CustomField>