force-app/main/default/objects/ActionPlanTemplateTask__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Category</label>
    <picklist>
        <picklistValues>
            <fullName>Email</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Phone Call</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Meeting</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Misc</fullName>
        </picklistValues>
    </picklist>
    <type>Picklist</type>
</CustomField>