force-app/main/default/objects/ActionPlanTemplateTask__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>leave blank to assign to owner</inlineHelpText>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>apTaskUser</relationshipName>
    <type>Lookup</type>
</CustomField>